# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  Untitled-1  Untitled-1.cpp  draw_GameOfLife.cpp  example-of-grid.cpp  main  main.cpp  test-sdl.cpp
src/: Cell.hpp  GameOfLife.hpp  Neighbour.hpp  Timer.hpp  Types.hpp  draw.hpp
